# local-deep-agents

./: .gitignore  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
src/local_deep_agents/: agent.py  file_tools.py  main.py  middleware.py  prompts.py  research_tools.py  states.py  subagent_types.py  summary.py  task_tool.py  tavily.py  think_tool.py  todo_tools.py  utils.py
