[project]
name = "local_deep_agents"
version = "0.1.0"
description = "Local deep agent from scratch"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.0a3",
    "langchain-anthropic>=0.1.23",
    "langchain>=1.0.0a10",
    "langgraph-prebuilt>=0.7.0a2",
    "tavily-python>=0.7.12",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["local_deep_agents"]

[tool.setuptools.package-dir]
"local_deep_agents" = "src/local_deep_agents"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"
